<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

        <EditText
            android:id="@+id/task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/activity_Tasks"
            android:hint="@string/task"
            android:inputType="text"
            android:onClick="fooText2"
            android:textSize="25sp">
        </EditText>

        <Button
            android:id="@+id/createTask"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:textSize="25sp">
        </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/task_item"
        />
</LinearLayout>